Split to components file. Add show edit input for TodoItem

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <script src="bower_components/react/react-with-addons.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/reflux/dist/reflux.js"></script>
+    <script src="bower_components/classnames/index.js"></script>
     <script src="js/actions.js"></script>
     <script src="js/stores.js"></script>
-    <script src="js/components.jsx" type="text/jsx"></script>
+    <script src="js/components/TodoItem.js" type="text/jsx"></script>
+    <script src="js/components/TodoItemsList.js" type="text/jsx"></script>
+    <script src="js/components/Input.js" type="text/jsx"></script>
+    <script src="js/components/App.js" type="text/jsx"></script>
     <script src="js/app.jsx" type="text/jsx"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
